--- a/perfumes.html
+++ b/perfumes.html
@@ -6,7 +6,9 @@
 <title>Perfumes - EREBUS</title>
 <link href="https://fonts.googleapis.com/css2?family=Neblina&display=swap" rel="stylesheet">
 <style>
-/* ... (todo tu CSS para perfumes, igual que la última versión, y pega el bloque del carrito flotante y modal igual que en index.html) ... */
+/* ... (todo el CSS del index, más el efecto móvil de la imagen del modal) ... */
+
+/* Carrito flotante y modal lateral (idéntico al index.html) */
 #floating-cart{
   position:fixed;right:30px;bottom:30px;z-index:2001;
   background:var(--color-primary);color:#fff;
@@ -60,6 +62,7 @@
   #floating-cart{right:12px;bottom:16px;width:50px;height:50px;font-size:1.4rem;}
   #cart-count{width:18px;height:18px;font-size:.8rem;}
 }
+/* ... (resto del CSS para perfumes, modal, efecto móvil, etc.) ... */
 </style>
 </head>
 <body>
